--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Muzhou Zhang"
 title_separator          : "-"
 name                     : &name "Muzhou Zhang"
 description              : &description "PhD candidate in political science"
-url                      : https://muzhouzhang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://www.muzhouzhang.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "muzhouzhang/muzhouzhang.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
