--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,11 @@
-# main links links
+# main links
 main:
   - title: "Curriculum vitae"
     url: "/files/cv.pdf"
     target: "_blank"
   
-  - title: "Research"
+  - title: "Ongoing research"
     url: /research/
+  
+  - title: "Publications"
+    url: /publications/
