--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,17 @@
 # main links
 main:
-  - title: "Curriculum vitae"
+  - title: "home"
+    url: /home/
+
+  - title: "curriculum vitae"
     url: "/files/cv.pdf"
     target: "_blank"
   
-  - title: "Ongoing research"
+  - title: "ongoing research"
     url: /research/
   
-  - title: "Publications"
+  - title: "publications"
     url: /publications/
+
+  - title: "miscellaneous"
+    url: /misc/
