--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   cv               :
   bio              : "Postdoc at Aarhus University"
   location         : "Bartholins Allé 7, 8000 Aarhus C"
-  office           : "bygning 1340, 131"
+  office           : "1340-131"
   employer         : "PhD from University of Essex"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=rsTHwPMAAAAJ&hl=en&oi=ao"
@@ -98,7 +98,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "muzhouzhang"
+  github           :
   google_plus      :
   keybase          :
   instagram        :
