profile photo format changed

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Muzhou Zhang"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   email            : "mz[at]ps.au.dk"
   cv               :
   bio              : "Postdoc at Aarhus University"
